--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  audioplayers: ^3.0.1
+  audioplayers: ^0.20.1
   camera : ^0.10.3+2
 dev_dependencies:
   flutter_test:
@@ -58,7 +58,14 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/
+    - assets/flous.jpg
+    - assets/tunisian-dinars.jpg
+    - assets/f1.png
+    - assets/f2.png
+    - assets/money.jpg
+    - assets/Voix.m4a
+    - assets/sound.mp3
+    - assets/sound3.mp3
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
