--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   audioplayers: ^0.20.1
   camera : ^0.10.3+2
+  flutter_tts: ^3.6.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
