--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   audioplayers: ^0.20.1
   camera : ^0.10.3+2
   flutter_tts: ^3.6.3
+  video_player: ^2.4.2
+  animated_text_kit: ^4.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,9 +66,13 @@ flutter:
     - assets/f1.png
     - assets/f2.png
     - assets/money.jpg
+    - assets/img.jpg
+    - assets/gold.jpg
     - assets/Voix.m4a
     - assets/sound.mp3
     - assets/sound3.mp3
+    - assets/video.mp4
+    - assets/video1.mp4
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
